--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,7 +558,9 @@ input::-webkit-inner-spin-button {
 }
 
 input[type=number] {
-  -moz-appearance: textfield;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 input[type=checkbox] {
@@ -1158,12 +1160,12 @@ span {
 }
 
 .section-heading {
-  width: 732px;
+  width: 100%;
 }
 
 .title-line {
-  width: 4px;
-  height: 67px;
+  width: 50px;
+  height: 5px;
   background-color: rgba(var(--p1));
 }
 
