--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1672,6 +1672,10 @@ input:-webkit-autofill:active {
     width: 100%;
   }
 }
+.project-card {
+  margin-bottom: 40px;
+}
+
 .side-menu {
   width: 300px;
   height: 100vh;
