--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1676,6 +1676,12 @@ input:-webkit-autofill:active {
   margin-bottom: 40px;
 }
 
+.portfolio-details-img {
+  -webkit-box-shadow: 0px 2px 10px rgba(var(--n4), 0.08);
+          box-shadow: 0px 2px 10px rgba(var(--n4), 0.08);
+  border: 1px solid rgba(var(--n4), 0.08);
+}
+
 .side-menu {
   width: 300px;
   height: 100vh;
