--- a/assets/scss/main/_global.scss
+++ b/assets/scss/main/_global.scss
@@ -716,14 +716,14 @@ span {
   background-color: rgba(var(--p1));
 }
 
-.page-heading {
-  width: 856px;
-  margin: auto;
-  .page-title {
-    width: 664px;
-    margin: auto;
-  }
-}
+//.page-heading {
+ // width: 856px;
+ // margin: auto;
+  //.page-title {
+    //width: 664px;
+    //margin: auto;
+  //}
+
 
 // preloder
 /* Loader Styles start here */
