--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,11 @@ li {
   padding-bottom: 60px;
 }
 
+.py-60 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 @media (max-width: 991px) {
   .display-nine {
     font-size: 100px;
@@ -300,6 +305,10 @@ li {
   .pb-60 {
     padding-bottom: 30px;
   }
+  .py-60 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .banner-section .overlay .sec-img {
     display: none;
   }
@@ -395,6 +404,9 @@ li {
   }
   .pb-60 {
     padding-bottom: 40px;
+  }
+  .footer {
+    padding-bottom: 80px;
   }
 }
 html {
