--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,10 +1,10 @@
 /*============================================ 
 # Name: Gurjit's Portfolio
 # Version: 1.0
-# Date: 25-10-2023
+# Date: 25-05-2025
 # Author: 
-# Author URI: 
-# Description: Gurjit's Blog HTML Template
+# Author: Gurjit KAur
+# Description: Gurjit's Portfolio
 ============================================*/
 
 /*============================================ 
