--- a/assets/scss/pages/_section.scss
+++ b/assets/scss/pages/_section.scss
@@ -357,6 +357,7 @@
 .project-details-content {
   .portfolio-details-img {
     transition: all 0.5s ease-in-out;
+    background-color: #fff;
     &:hover {
       transform: scale(1.04);
     }
