--- a/assets/scss/pages/_section.scss
+++ b/assets/scss/pages/_section.scss
@@ -76,6 +76,10 @@
     border: 1px solid rgba(var(--p1), 1);
     box-shadow: 0px 12px 40px 0px rgba(0, 0, 0, 0.16);
   }
+  img{
+    height: 28px;
+    width: auto;
+  }
 }
 
 // next project section style
