--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1911,6 +1911,10 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0px 12px 40px 0px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 12px 40px 0px rgba(0, 0, 0, 0.16);
 }
+.service-card img {
+  height: 28px;
+  width: auto;
+}
 
 .next-project {
   background-image: url("../images/bg.png");
