--- a/assets/scss/main/_typography.scss
+++ b/assets/scss/main/_typography.scss
@@ -20,74 +20,76 @@
 
 .fs-one,
 h1,
-h1 > a {
+h1>a {
   font-size: 48px;
   line-height: 120%;
 }
 
 .fs-two,
 h2,
-h2 > a {
+h2>a {
   font-size: 40px;
   line-height: 120%;
 }
 
 .fs-three,
 h3,
-h3 > a {
+h3>a {
   font-size: 32px;
   line-height: 120%;
 }
 
 .fs-four,
 h4,
-h4 > a {
+h4>a {
   font-size: 28px;
   line-height: 120%;
 }
 
 .fs-five,
 h5,
-h5 > a {
+h5>a {
   font-size: 24px;
   line-height: 120%;
 }
 
 .fs-six,
 h6,
-h6 > a {
+h6>a {
   font-size: 20px;
   line-height: 120%;
 }
 
 .fs-seven {
   font-size: 18px;
-  line-height: 130%;
+  line-height: 1.5;
 }
 
 .fs-eight {
   font-size: 16px;
-  line-height: 130%;
+  line-height: 1.5;
 }
 
 .fs-nine {
   font-size: 14px;
-  line-height: 130%;
+  line-height: 1.5;
 }
+
 .fs-ten {
   font-size: 12px;
-  line-height: 130%;
+  line-height: 1.5;
 }
 
 .fs-eleven {
   font-size: 10px;
-  line-height: 130%;
+  line-height: 1.5;
 }
 
 table thead tr th {
   font-size: 16px;
-  line-height: 130%;
+  line-height: 1.5;
 }
+
 a,
 p,
 button,
@@ -97,27 +99,32 @@ li {
   font-size: 16px;
   line-height: 150%;
 }
+
 @media (max-width: 1399px) {
   .display-nine {
     font-size: 150px;
     line-height: 100%;
   }
 }
+
 @media (max-width: 1199px) {
   .display-nine {
     font-size: 120px;
     line-height: 100%;
   }
+
   h1,
-  h1 > a {
+  h1>a {
     font-size: 40px;
     line-height: 120%;
   }
+
   h2,
-  h2 > a {
+  h2>a {
     font-size: 32px;
     line-height: 120%;
   }
+
   .preloader {
     background-size: 30%;
   }
@@ -126,9 +133,11 @@ li {
 .pt-120 {
   padding-top: 120px;
 }
+
 .pb-120 {
   padding-bottom: 120px;
 }
+
 .pt-60 {
   padding-top: 60px;
 }
@@ -136,18 +145,21 @@ li {
 .pb-60 {
   padding-bottom: 60px;
 }
-  .py-60{
-  padding-top:60px;
-  padding-bottom:60px;
-    
-  }
+
+.py-60 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+}
 
 @media (max-width: 991px) {
+
   // Normalize
   .display-nine {
     font-size: 100px;
     line-height: 100%;
   }
+
   .display-one {
     font-size: 72px;
     line-height: 120%;
@@ -180,58 +192,59 @@ li {
 
   .fs-one,
   h1,
-  h1 > a {
+  h1>a {
     font-size: 40px;
     line-height: 120%;
   }
 
   .fs-two,
   h2,
-  h2 > a {
+  h2>a {
     font-size: 32px;
     line-height: 120%;
   }
 
   .fs-three,
   h3,
-  h3 > a {
+  h3>a {
     font-size: 28px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-four,
   h4,
-  h4 > a {
+  h4>a {
     font-size: 24px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-five,
   h5,
-  h5 > a {
+  h5>a {
     font-size: 18px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-six,
   h6,
-  h6 > a {
+  h6>a {
     font-size: 18px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-seven {
     font-size: 16px;
-    line-height: 130%;
+    line-height: 1.5;
   }
+
   .fs-ten {
     font-size: 16px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   table thead tr th {
     font-size: 16px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   a,
@@ -247,6 +260,7 @@ li {
   .pt-120 {
     padding-top: 60px;
   }
+
   .pb-120 {
     padding-bottom: 60px;
   }
@@ -258,15 +272,17 @@ li {
   .pb-60 {
     padding-bottom: 30px;
   }
-   .py-60{
-  padding-top:30px;
-  padding-bottom:30px;
-    
+
+  .py-60 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
   }
 
   .banner-section .overlay .sec-img {
     display: none;
   }
+
   .banner-section .banner-content {
     padding: 80px 0 90px;
   }
@@ -277,6 +293,7 @@ li {
     font-size: 80px;
     line-height: 100%;
   }
+
   .display-one {
     font-size: 56px;
     line-height: 67.2px;
@@ -309,65 +326,66 @@ li {
 
   .fs-one,
   h1,
-  h1 > a {
+  h1>a {
     font-size: 32px;
     line-height: 120%;
   }
 
   .fs-two,
   h2,
-  h2 > a {
+  h2>a {
     font-size: 28px;
     line-height: 120%;
   }
 
   .fs-three,
   h3,
-  h3 > a {
+  h3>a {
     font-size: 26px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-four,
   h4,
-  h4 > a {
+  h4>a {
     font-size: 22px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-five,
   h5,
-  h5 > a {
+  h5>a {
     font-size: 20px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-six,
   h6,
-  h6 > a {
+  h6>a {
     font-size: 16px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-seven {
     font-size: 16px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .fs-nine {
     font-size: 11px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
 
   table thead tr th {
     font-size: 14px;
-    line-height: 130%;
+    line-height: 1.5;
   }
 
   .pt-120 {
     padding-top: 50px;
   }
+
   .pb-120 {
     padding-bottom: 50px;
   }
@@ -379,10 +397,9 @@ li {
   .pb-60 {
     padding-bottom: 40px;
   }
-  .footer{   
-      padding-bottom:80px;    
+
+  .footer {
+    padding-bottom: 80px;
   }
- 
+
 }
-
-
